파일 확장자 변경 header 추가

--- a/public/index.css
+++ b/public/index.css
@@ -101,6 +101,12 @@ a {
 html {
     font-size: 1px;
 }
+
 body {
     font-size: 16rem;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
 }
